unpackaged/main/default/objects/CICO_Workshop_Location__c/CICO_Workshop_Location__c.object-meta.xml
<CustomObject>
    <label>ET Workshop Location</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ET Workshop Location</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>