unpackaged/main/default/objects/CICO_Workshop_Location__c/fields/Boundary_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Boundary_Coordinates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Boundary Coordinates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>