unpackaged/main/default/objects/CICO_Workshop_Location__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>