unpackaged/main/default/objects/CICO_Workshop_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location_Code__c</columns>
    <columns>User_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>